--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-tetris
+#TETRIS  
+##Game instruction  
+'''
+    Press UP to rotate the block clockwise  
+    Press LEFT or RIGHT to move the block  
+'''
