--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-# TETRIS  
-## Game instruction  
+#TETRIS  
+##Game instruction  
 '''
     Press UP to rotate the block clockwise  
     Press LEFT or RIGHT to move the block  
+    Press DOWN to speed up falling  
+    Press SPACE to pause the game  
 '''
